--- a/style/header.css
+++ b/style/header.css
@@ -3,39 +3,38 @@ body {
 }
 
 header {
-  background: white;
+  background-color: white;
 }
 
 .header-wrap {
-  width: 1124px;
+  width: 1224px;
   margin: auto;
   padding: 22px 0;
-  /* vertical-align: middle; */
 }
 
-.btn-logo {
+header .btn-logo {
   height: 75px;
 }
 
 header .btn-join {
   display: block;
-  padding-left: 1em 1em 1em 2.8em;
+  padding: 1em 1em 1em 2.8em;
   margin: 10px;
+  float: right;
   text-decoration: none;
   color: #5a6a72;
-  float: right;
-  background: url(./img/icon-join.svg) no-repeat -0.9em center/ 2em;
+  background: url(../img/icon-join.svg) no-repeat 0.8em center/ 2em;
 }
 
+/* main */
 main {
   width: 392px;
-  margin: 71px auto;
+  margin: 71px auto 52px;
 }
 
 main h1 {
   text-align: center;
   font-size: 24px;
-  /* text-decoration: underline; */
 }
 
 main h1 img {
@@ -46,13 +45,12 @@ main h1 img {
 }
 
 main h1 strong {
-  line-height: 16px;
-  box-shadow: inset 0 -0.6 rgba(255, 79, 110, 0.2);
+  box-shadow: inset 0 -0.6em rgba(255, 79, 110, 0.2);
   border-bottom: 2px solid #ff4f6e;
 }
 
 footer p {
   text-align: center;
   font-size: 12px;
-  color: #484846;
+  color: #677880;
 }
